<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tckr.dukcud.AboutActivityFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView android:text="@string/about"
            android:id="@+id/fa_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cypo_header_text_size"
            android:textColor="@color/cypo_accent"
            android:layout_marginTop="16dp"
            android:maxWidth="@dimen/cypo_max_width"
            android:layout_centerHorizontal="true"
            />

        <TextView android:text="@string/cypo_desc"
            android:id="@+id/fa_cypo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cypo_normal_text_size"
            android:textColor="@color/cypo_black"
            android:layout_below="@+id/fa_header"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:maxWidth="@dimen/cypo_max_width"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/fa_icon"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fa_cypo_desc"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />

        <TextView android:text="@string/about_msg"
            android:id="@+id/fa_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cypo_normal_text_size"
            android:textColor="@color/cypo_black"
            android:layout_below="@+id/fa_icon"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:width="@dimen/cypo_about_width"
            android:layout_centerHorizontal="true"
            />

        <Switch
            android:text="@string/debug_mode"
            android:id="@+id/fa_debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fa_message"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:width="@dimen/cypo_about_width"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/fa_empty"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fa_debug"
            />

    </RelativeLayout>
</ScrollView>